[gd_scene load_steps=4 format=3 uid="uid://baukljklqmdno"]

[ext_resource type="Texture2D" uid="uid://dpl0b8lnp8aor" path="res://Player/Attack/YonduArrow/YonduArrow.png" id="1_7yeo7"]
[ext_resource type="Script" path="res://Player/Attack/YonduArrow/yondu_arrow.gd" id="1_58d6d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi6rn"]
size = Vector2(5.65685, 45.2548)

[node name="YonduArrow" type="Area2D"]
top_level = true
collision_layer = 8
collision_mask = 8
script = ExtResource("1_58d6d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 4.71239
texture = ExtResource("1_7yeo7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.785398
shape = SubResource("RectangleShape2D_oi6rn")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
